# rust-calculator

./: README.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/: main.css
src/js/: main.js
